# todo

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: da66c257d80f_added_todos_table.py
backend/: Dockerfile  Dockerfile.prod  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  run.sh
backend/.aws/: task-definition.json
backend/alembic/: env.py
backend/alembic/versions/: 1580dc3e8455_added_todo_table.py  490b3c54e605_added_users_table.py
backend/conf/templates/: default.conf.template
backend/todo/: config.py  crud.py  dependencies.py  main.py  models.py
backend/todo/routers/: healthcheck.py  token.py
conf/local/templates/: default.conf.template
frontend/: package-lock.json  package.json  webpack.config.js
frontend/public/: index.html
frontend/src/: index.js  index.scss
frontend/src/components/: Button.js  Button.scss  Header.scss  Input.js
frontend/src/layouts/: AppLayout.js  AppLayout.scss  AppLogo.jsx  LoginLayout.js  LoginLayout.scss  LoginLogo.jsx
frontend/src/styles/: _colors.scss
frontend/src/utils/: api.js
templates/: default.conf.template
todo/: config.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  utils.py
todo/routers/: auth.py  todos.py  token.py  users.py
todo/tests/: common.py  factories.py
todo/tests/api/: conftest.py  test_healthcheck.py  test_todos.py  test_users.py
(+10 files in other folders)
